New function Promote-AppSourceSubmission to promote a submission of a product on AppSource from preview to live / production
New function Cancel-AppSourceSubmission to cancel an in progress submission of a product on AppSource
Support getting NextMajor of countries with no current release in Get-BcArtifactUrl

3.0.12
Error in retry method in Get-BcArtifactUrl (3.0.11)
Fixed array parsing in Get-BcContainerAppInfo (only if -useNewFormat switch is included)
Added ContainerHelper config UseNewFormatForGetBcContainerAppInfo with which you can force Get-BcContainerAppInfo to return values in new format 
Issue #2573 improve error message when restoring database on host
Issue #2575 Backup-BcContainerDatabases doesn't work with external SQL Server (if hosthelperfolder is different from containerhelperfolder)
Issue #2598 NavSip.dll missing in SysWOW64 on business central 21.0 artifact
Issue #2581 Event log messages show the wrong description
Issue #2590 UploadImportAndApply-ConfigPackageInBcContainer ignores tenant parameter
Issue #2591 Performance issue with Get-NavContainerAppInfo
Issue #2587 Run-ALPipeline with App Name Change
Partial fix for Issue #2595 (Issues with "Edit in Excel" for container behind traefik)
Issue #2523 New-BcContainerBcUser returns 'The Aggregate Permission Set does not exist.' on BC20 (this bug also requires a BC fix - available in 20.4)
New Function Get-BcScheduledUpgrade which calls the admin center api to check for BC SaaS CU updates
New Function Reschedule-BcUpgrade which calls the admin center api to reschedule an BC SaaS environment upgrade to a given datetime 
Workaround for issue #2607 BcContainerHelper Networking and static IP
Added parameter -macAddress to New-BcContainer to enable setting the container Mac Address
Added parameter -IP to New-BcContainer to enable setting the container IP Address
Added parameter -hostIP to enable setting the host.containerhelper.internal IP address inside the container