@@ -78,7 +78,8 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Copy-FileToBcContainer', 'Create-AlProjectFolderFromBcContainer', 
                'Create-MyDeltaFolder', 'Create-MyOriginalFolder', 
                'Create-AadAppsForNav', 'Create-AadUsersInBcContainer', 
-               'New-BcAuthContext', 'Renew-BcAuthContext', 'Get-BcEnvironments', 'Get-BcPublishedApps', 'Get-ALGoAuthContext', 
+               'New-BcAuthContext', 'Renew-BcAuthContext', 'Get-BcEnvironments', 'Get-BcPublishedApps',
+               'New-ALGoAuthContext', 'New-ALGoAppSourceContext', 'New-ALGoStorageContext', 
                'Get-BcInstalledExtensions', 'Install-BcAppFromAppSource', 'New-BcEnvironment', 
                'Remove-BcEnvironment', 'Set-BcEnvironmentApplicationInsightsKey',
                'New-BcDatabaseExport', 'Get-BcDatabaseExportHistory',
@@ -155,7 +156,7 @@ AliasesToExport = 'Add-FontsToNavContainer', 'Backup-NavContainerDatabases',
                'Create-AadAppsForBC', 'Create-AadUsersInNavContainer', 
                'Enter-NavContainer', 'Export-NavContainerDatabasesAsBacpac', 
                'Extract-FilesFromNavContainerImage', 'Convert-AlcOutputToAzureDevOps', 
-               'Extract-FilesFromStoppedNavContainer', 
+               'Extract-FilesFromStoppedNavContainer', 'Get-ALGoAuthContext', 
                'Get-BestNavContainerImageName', 'Get-CompanyInNavContainer', 
                'Get-NavContainerApiCompanyId', 'Get-NavContainerApp', 
                'Get-NavContainerAppInfo', 'Get-NavContainerAppRuntimePackage', 
