@@ -375,7 +375,9 @@ if (!$silent) {
 . (Join-Path $PSScriptRoot "ObjectHandling\Invoke-NavContainerCodeunit.ps1")
 
 # AL-Go for GitHub functions
-. (Join-Path $PSScriptRoot "AL-Go\Get-ALGoAuthContext.ps1")
+. (Join-Path $PSScriptRoot "AL-Go\New-ALGoAuthContext.ps1")
+. (Join-Path $PSScriptRoot "AL-Go\New-ALGoAppSourceContext.ps1")
+. (Join-Path $PSScriptRoot "AL-Go\New-ALGoStorageContext.ps1")
 #. (Join-Path $PSScriptRoot "AL-Go\New-ALGoRepo.ps1")
 #. (Join-Path $PSScriptRoot "AL-Go\New-ALGoRepoWizard.ps1")
 
